Joseki3
=======

Joseki 3.2
----------

+ Streaming queries can now work (requires writing server initialization code for your DB) 
+ Initial support for SPARQL/Update.
+ Complete integration with SDB
+ Upgraded to ARQ 2.4, Jena-2.5.6, lucene-core-3.2.1.jar and many other jars.
+ Upgraded Jetty to 6.1

Joseki 3.1
----------

+ Upgraded to ARQ 2.0

+ Upgraded Jetty to 6.1.3
  This changes the names of some jars.
  
+ MIME types corrected
  (thanks to Richard Cyganiak for doing the background research for this)

Joseki 3.0
----------

Joseki3 is not compatible with Joseki2.

+ Supports the SPARQL protocol over HTTP (Last Call version)
+ Supports the SPARQL query language (Last Call version)

+ HTTP protocol - done
+ SOAP protocol - done but highly experimental.

+ Jar changes for Jetty6 and other upgrades

== Changes from Joseki 3.0 beta 1&2

+ The configuration file now uses Jena assemblers for datasets as well as models.
  See joseki-config-example.ttl for examples
  Warning are issued for use of the vocabulary used in Joseki-3-dev releases.

+ Jar file changes
  common-logging.jar ==> commons-logging-1.1.jar
  arq-extra.jar : new
  Upgraded to wstx-asl-3.0.0

+ Uses Jetty 6, upgraded from Jetty 5.
	org.mortbay*jar ==> jetty*jar
	javax.servlet.jar ==> servlet-api-2.5-6.0.1.jar






