@@ -286,8 +286,8 @@
 
         <copy todir="${dist.dir}" file="joseki-config-example.ttl"/>
         <copy todir="${dist.dir}" file="joseki-config-sdb.ttl"/>
-        <copy todir="${dist.dir}" file="sdb.ttl"/>
         <copy todir="${dist.dir}" file="joseki-config-tdb.ttl"/>
+        <copy todir="${dist.dir}" file="sdb.ttl"/>
 
         <copy todir="${dist.dir}/bin">
           <fileset dir="bin" excludes="*.~" />
