@@ -17,7 +17,7 @@ public class RunServer
     {
         RunUtils.setLog4j() ;
         
-        String[] a = new String[]{"joseki-config.ttl"} ;
+        String[] a = new String[]{"joseki-config-sdb.ttl"} ;
         //String[] a = args ;
         runJosekiServer(a) ; System.exit(0) ;
         //AxisServer.main(args) ; System.exit(0) ;
