@@ -1,5 +1,12 @@
 #!/bin/bash
 
+# Before running this ....
+# Ensure the two services "update/service" and "sparql/read" exists 
+# Named graph update only works on a mutable dataset (so not an ad-hoc in-memory one)
+
 export  http_proxy=
 wget -O - --post-data="request=$(cat update.ru)"  'http://localhost:2020/update/service'
-wget -O - 'http://localhost:2020/sparql/read?query=SELECT * { ?s ?p ?o}'
+echo
+wget -O - 'http://localhost:2020/sparql?query=SELECT * { ?s ?p ?o}'
+echo
+wget -O - 'http://localhost:2020/sparql?query=SELECT * { GRAPH ?g { ?s ?p ?o}}'
